# agent/openapi.json
@@ -2,7 +2,7 @@
   "openapi": "3.1.0",
   "info": {
     "title": "hal-agent",
-    "version": "1.3.0"
+    "version": "1.3.1"
   },
   "paths": {
     "/health": {
@@ -1366,7 +1366,8 @@
             "enum": [
               "service",
               "container",
-              "site"
+              "site",
+              "backup"
             ],
             "title": "Kind"
           },
